--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 GiphyApp.xcodeproj/xcuserdata
 GiphyNetwork/.swiftpm
+GiphyApp.xcodeproj/project.xcworkspace/xcuserdata
+GiphyApp.xcodeproj/xcshareddata
+.DS_Store
